--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "conventional-changelog"
   ],
   "activationEvents": [
-    "onCommand:extension.sayHello"
+    "onCommand:extension.commit"
   ],
   "main": "./out/src/extension",
   "contributes": {
     "commands": [
       {
-        "command": "extension.sayHello",
-        "title": "Hello World"
+        "command": "extension.commit",
+        "title": "conventional commit",
+        "category": "Commitizen"
       }
     ]
   },
@@ -52,6 +53,9 @@
     "tslint": "4.0.0",
     "typescript": "^2.0.3",
     "vscode": "^1.0.0"
+  },
+  "dependencies": {
+    "execa": "0.5.0"
   },
   "repository": {
     "type": "git",
