style: fix linter warnings

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "publish-extension": "vsce publish $(node -e \"console.log(require('./package.json').version)\")"
   },
   "devDependencies": {
+    "@knisterpeter/standard-tslint": "^1.0.3",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
     "conventional-changelog-lint": "1.1.0",
