--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "vscode": "^1.0.0"
   },
   "dependencies": {
-    "execa": "0.5.0"
+    "execa": "0.5.0",
+    "sander": "0.6.0"
   },
   "repository": {
     "type": "git",
