--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@knisterpeter/standard-tslint": "^1.0.3",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.40",
+    "@types/wrap-ansi": "2.0.14",
     "conventional-changelog-lint": "1.1.0",
     "cz-customizable": "4.0.0",
     "husky": "0.11.9",
@@ -57,7 +58,8 @@
   },
   "dependencies": {
     "execa": "0.5.0",
-    "sander": "0.6.0"
+    "sander": "0.6.0",
+    "wrap-ansi": "2.1.0"
   },
   "repository": {
     "type": "git",
