--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
     "publish-extension": "vsce publish $(node -e \"console.log(require('./package.json').version)\")"
   },
   "devDependencies": {
-    "@knisterpeter/standard-tslint": "^1.1.0",
-    "@types/mocha": "^2.2.32",
-    "@types/node": "^7.0.4",
-    "@types/wrap-ansi": "2.0.14",
-    "conventional-changelog-lint": "1.1.0",
-    "cz-customizable": "4.0.0",
-    "husky": "0.12.0",
-    "mocha": "^3.1.2",
-    "standard-version": "4.0.0",
-    "tslint": "4.5.1",
-    "typescript": "^2.0.3",
-    "vscode": "^1.0.0"
+    "@knisterpeter/standard-tslint": "^1.3.0",
+    "@types/mocha": "^2.2.40",
+    "@types/node": "^7.0.8",
+    "@types/wrap-ansi": "^2.0.14",
+    "conventional-changelog-lint": "^1.1.2",
+    "cz-customizable": "^4.0.0",
+    "husky": "^0.13.2",
+    "mocha": "^3.2.0",
+    "standard-version": "^4.0.0",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
+    "vscode": "^1.1.0"
   },
   "dependencies": {
     "execa": "0.6.0",
