--- a/package.json
+++ b/package.json
@@ -34,6 +34,16 @@
           "type": "number",
           "default": 50,
           "description": "Override the allowed commit message subject length."
+        },
+        "commitizen.showOutputChannel": {
+          "type": "string",
+          "enum": [
+            "off",
+            "always",
+            "onError"
+          ],
+          "default": "onError",
+          "description": "Open the output panel after commit."
         }
       }
     },
