--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     ]
   },
   "scripts": {
-    "linter": "tslint --project ./tsconfig.json --type-check",
+    "linter": "tslint --project .",
     "test": "node ./node_modules/vscode/bin/test",
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
