--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
 os:
   # - osx # still too slow
   - linux
+services:
+  - xvfb
 addons:
   apt:
     packages:
@@ -23,12 +25,6 @@ notifications:
   email:
     on_success: never
 
-before_install:
-  - if [ $TRAVIS_OS_NAME == "linux" ]; then
-      export CXX="g++-4.9" CC="gcc-4.9" DISPLAY=:99.0;
-      sh -e /etc/init.d/xvfb start;
-      sleep 3;
-    fi
 install:
   - yarn
   - yarn vscode:prepublish
