--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
           "type": "boolean",
           "default": true,
           "description": "Set to true to put double quotes around the message when calling git -m."
+        },
+        "commitizen.capitalizeWindowsDriveLetter": {
+          "type": "boolean",
+          "default": false,
+          "description": "Set to true to capitalize the Windows drive letter in Git's working directory path. Git treats paths as case sensitive and may ignore [includeIf] attributes in your .gitconfig if drive letters are the wrong case."
         }
       }
     },
