--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "standard-version": "8.0.0",
     "tslint": "6.1.2",
     "typescript": "3.9.6",
+    "vsce": "^1.75.0",
     "vscode": "1.1.37"
   },
   "dependencies": {
