--- a/package.json
+++ b/package.json
@@ -67,10 +67,10 @@
   },
   "scripts": {
     "linter": "tslint --project .",
-    "test": "node ./node_modules/vscode/bin/test",
+    "pretest": "yarn vscode:prepublish && yarn linter",
+    "test": "node ./out/test/runTest.js",
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
     "prerelease": "git checkout master && git pull origin master && npm run vscode:prepublish",
     "release": "standard-version",
     "postrelease": "git push --follow-tags origin master",
@@ -80,17 +80,20 @@
     "@knisterpeter/standard-tslint": "1.7.2",
     "@types/mocha": "7.0.2",
     "@types/node": "10.17.26",
+    "@types/vscode": "1.44.0",
     "@types/wrap-ansi": "3.0.0",
     "conventional-changelog-lint": "2.1.1",
     "cz-customizable": "6.2.1",
+    "glob": "7.1.6",
     "husky": "4.2.5",
     "mocha": "8.0.1",
+    "prettier": "^2.0.5",
     "shipjs": "0.20.1",
     "standard-version": "8.0.0",
     "tslint": "6.1.2",
     "typescript": "3.9.6",
     "vsce": "1.77.0",
-    "vscode": "1.1.37"
+    "vscode-test": "1.4.0"
   },
   "dependencies": {
     "execa": "^4.0.0",
@@ -123,5 +126,9 @@
     "hooks": {
       "commit-msg": "conventional-changelog-lint -e"
     }
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "none"
   }
 }
