feat: add shell option
On windows, Only the first line makes it to the final commit message. this option and the exist `quoteMessageInGitCommit` option set to be false will fix this issue.

Close #325

--- a/package.json
+++ b/package.json
@@ -54,6 +54,11 @@
           "type": "boolean",
           "default": false,
           "description": "Set to true to capitalize the Windows drive letter in Git's working directory path. Git treats paths as case sensitive and may ignore [includeIf] attributes in your .gitconfig if drive letters are the wrong case."
+        },
+        "commitizen.shell": {
+          "type": "boolean",
+          "default": true,
+          "description": "Set to true to runs file inside of a shell. Uses /bin/sh on UNIX and cmd.exe on Windows."
         }
       }
     },
