--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
           "default": false,
           "description": "Set to true to capitalize the Windows drive letter in Git's working directory path. Git treats paths as case sensitive and may ignore [includeIf] attributes in your .gitconfig if drive letters are the wrong case."
         },
+        "commitizen.useGitRoot": {
+            "type": "boolean",
+            "default": false,
+            "description": "Use git root to locate .cz-config.js file via `git rev-parse --show-toplevel`"
+        },
         "commitizen.shell": {
           "type": "boolean",
           "default": true,
