--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
           "type": "boolean",
           "default": true,
           "description": "Set to true to runs file inside of a shell. Uses /bin/sh on UNIX and cmd.exe on Windows."
+        },
+        "commitizen.signCommits": {
+          "type": "boolean",
+          "default": false,
+          "description": "Set to true to sign commits by adding the -S flag"
         }
       }
     },
