--- a/package.json
+++ b/package.json
@@ -69,6 +69,11 @@
           "type": "boolean",
           "default": false,
           "description": "Set to true to sign commits by adding the -S flag"
+        },
+        "commitizen.autoCommit": {
+          "type": "boolean",
+          "default": true,
+          "description": "Set to true to automatically commit, otherwise It only fills commit message."
         }
       }
     },
