feat: icon from commitizen/cz-cli as command icon

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "command": "vscode-commitizen.commit",
         "title": "Conventional Commits",
         "category": "Commitizen",
-        "icon": "images/commitizen-logo.png"
+        "icon": "images/commitizen-logo.svg"
       }
     ],
     "menus": {
